two_tier_architechture_aws_terraform/vpc.tf
resource "aws_vpc" "two_tier" {
    cidr_block       = var.vpc_cidr_block
    enable_dns_hostnames = true
    enable_dns_support   = true

  tags = {
    Name = "Main VPC"
  }
}
